basic setup back to front

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ env
 .env
 firebase-messaging-sw
 firebase-messaging-sw.js
+
+first-firebase-project-chriswf-f973e4ed690d.JSON
+first-firebase-project-chriswf-f973e4ed690d
