--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-use-websocket": "^2.8.0",
+    "web-vitals": "^1.1.2",
+    "ws": "^8.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
