--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-use-websocket": "^2.8.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2",
     "ws": "^8.2.3"
   },
