--- a/ws-server/package.json
+++ b/ws-server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "socket.io": "^4.2.0",
     "ws": "^8.2.3"
   }
 }
